SF Primes/src/objects/Clone_Destination_Query_Condition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for constructing the destination query condition</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>This field has the name of the class which contains the method</description>
        <inlineHelpText>This field has the name of the class which contains the method</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloning_Type_Identifier__c</fullName>
        <description>This value exactly as the &apos;Name&apos; of the Clone_Records_Settings__c. All the records with the same Name value relate to the same cloning type.</description>
        <inlineHelpText>This value exactly as the &apos;Name&apos; of the Clone_Records_Settings__c. All the records with the same Name value relate to the same cloning type.</inlineHelpText>
        <label>Cloning Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Example: key is &apos;OwnerId&apos; in &quot;OwnerId = CurrentUserId&quot;</description>
        <inlineHelpText>Example: key is &apos;OwnerId&apos; in &quot;OwnerId = CurrentUserId&quot;</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Name of the method in the Class Name. This method returns the value for the key if value is &apos;Dynamic&apos;</description>
        <inlineHelpText>Name of the method in the Class Name. This method returns the value for the key if value is &apos;Dynamic&apos;</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>This could be anything like &apos;=&apos;, &apos;!=&apos;, &apos;IN&apos; etc.</description>
        <inlineHelpText>This could be anything like &apos;=&apos;, &apos;!=&apos;, &apos;IN&apos; etc.</inlineHelpText>
        <label>Operator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>This has to be integer value even though this field type is decimal</description>
        <inlineHelpText>This has to be integer value even though this field type is decimal</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Example: Value is &apos;CurrentUserId&apos; in &quot;OwnerId = :CurrentUserId&quot;. This could be any string value of the salesforce field. If this value is &apos;Dynamic&apos; then the value for this field is returned by a method.</description>
        <inlineHelpText>Example: Value is &apos;CurrentUserId&apos; in &quot;OwnerId = :CurrentUserId&quot;. This could be any string value of the salesforce field. If this value is &apos;Dynamic&apos; then the value for this field is returned by a method.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clone Destination Query Condition</label>
</CustomObject>